# playfair

./: Cargo.toml  README.md
_dist/: package.win32-x64-msvc.node
cli/: Cargo.toml  build.rs
cli/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: lib.rs
lib/: Cargo.toml  build.rs  index.js  package-lock.json  package.json  xbuild.mjs
lib/npm/darwin-x64/: README.md  package.json
lib/npm/linux-x64-gnu/: README.md  package.json
lib/npm/win32-x64-msvc/: README.md  package.json
lib/src/: lib.rs
server/: index.js  package.json  playfair.js
