[package]
edition = "2021"
name = "playfair-core"
version = "1.0.0"

[lib]
path = "src/lib.rs"

[dependencies]
aes = "0.8.4"
argon2 = "0.5.3"
base64 = "0.22.1"
cbc = "0.1.2"
rand = "0.8.5"
memmap2 = { workspace = true }
reqwest = { version = "0.12.8", features = ["blocking"] }
sha2 = { workspace = true }
hmac = "0.12.1"
hex = { workspace = true }
obfstr = { workspace = true }
