[package]
edition = "2021"
name = "playfair"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
playfair-core = { workspace = true }
base64 = "0.22.1"
url = "2.5.2"
memmap2 = { workspace = true }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "compat-mode"] }
napi-derive = { version = "2.12.2", default-features = false, features = ["compat-mode"] }
windows = { version = "0.58.0", features=["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
sha2 = { workspace = true }
hex = { workspace = true }
obfstr = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"
sha2 = "0.10.8"
hex = { workspace = true }
